fix: css to topFiveForm is chaning in both homepage and detailPage when edit / can't align items without breaking in second location

--- a/src/components/TopFive/TopFive.css
+++ b/src/components/TopFive/TopFive.css
@@ -1,6 +1,5 @@
 .topFiveCardForm, .topFiveProfileCardContainer {
     min-width: 400px;
-    max-width: auto;
     height: auto;
     padding: 1%;
 
@@ -13,7 +12,6 @@
     box-shadow: 0 6px 10px rgba(0,0,0,.25), 0 0 6px rgba(0,0,0,.15);
     background-color: white;
     max-width: 750px;
-    left: 35%;
 }
 
 .topFiveCardForm__formTitle {
